# aq

./: .CMakeLists.txt.kate-swp  .gitignore  .travis.yml  AQ.kdev4  AQ.sln  CMakeLists.txt  README.md  Warnings.txt  _a_q_8h_source.html  _a_q_item_8h_source.html  _a_q_reader_8h_source.html  _a_q_snapshot_8h_source.html  _a_q_unformatted_exception_8h_source.html  _a_q_writer_8h_source.html  _a_q_writer_item_8h_source.html  annotated.html  class_a_q-members.html  class_a_q.html  class_a_q_item-members.html  class_a_q_item.html  class_a_q_reader-members.html  class_a_q_reader.html  class_a_q_snapshot-members.html  class_a_q_snapshot.html  class_a_q_unformatted_exception-members.html  class_a_q_unformatted_exception.html  class_a_q_writer-members.html  class_a_q_writer.html  class_a_q_writer_item-members.html  class_a_q_writer_item.html  classes.html  coverity.bat  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  (+1 more)
AQ/: AQ.cpp  AQ.cpp.func-sort-c.html  AQ.cpp.func.html  AQ.cpp.gcov.html  AQ.h  AQ.h.func-sort-c.html  AQ.h.func.html  AQ.h.gcov.html  AQ.vcxproj  AQ.vcxproj.filters  AQItem.cpp  AQItem.cpp.func-sort-c.html  AQItem.cpp.func.html  AQItem.cpp.gcov.html  AQItem.h  AQItem.h.func-sort-c.html  AQItem.h.func.html  AQItem.h.gcov.html  AQReader.cpp  AQReader.cpp.func-sort-c.html  AQReader.cpp.func.html  AQReader.cpp.gcov.html  AQReader.h  AQSnapshot.cpp  AQSnapshot.cpp.func-sort-c.html  AQSnapshot.cpp.func.html  AQSnapshot.cpp.gcov.html  AQSnapshot.h  AQSnapshot.h.func-sort-c.html  AQSnapshot.h.func.html  AQSnapshot.h.gcov.html  AQUnformattedException.cpp  AQUnformattedException.cpp.func-sort-c.html  AQUnformattedException.cpp.func.html  AQUnformattedException.cpp.gcov.html  AQUnformattedException.h  AQWriter.cpp  AQWriter.cpp.func-sort-c.html  AQWriter.cpp.func.html  AQWriter.cpp.gcov.html  (+14 more)
AQ/Internal/: Crc32.cpp  Crc32.cpp.func-sort-c.html  Crc32.cpp.func.html  Crc32.cpp.gcov.html  CtrlOverlay.cpp  CtrlOverlay.cpp.func-sort-c.html  CtrlOverlay.cpp.func.html  CtrlOverlay.cpp.gcov.html  CtrlOverlay.h  LinkedItemProcessor.cpp  LinkedItemProcessor.cpp.func-sort-c.html  LinkedItemProcessor.cpp.func.html  LinkedItemProcessor.cpp.gcov.html  TestPointNotifier.cpp  TestPointNotifier.h  Timer.cpp  TraceBuffer.cpp  TraceBuffer.h  TraceManager.h  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
AQ/Internal/Linux/: Atomic.h  Atomic.h.func-sort-c.html  Atomic.h.func.html  Atomic.h.gcov.html  Timer.h  Timer.h.func-sort-c.html  Timer.h.func.html  Timer.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
AQ/Internal/Windows/: Atomic.h  Timer.h
PerfTest/: AQProvider.cpp  AQStrawManProvider.h  AllocatingDequeProvider.cpp  CMakeLists.txt  ClaimCommitTest.h  ClaimTest.cpp  ClaimTest.h  CommitTest.cpp  CommitTest.h  FullQueueTest.cpp  FullQueueTest.h  IQueueProvider.h  Main.cpp  Main.h  PerfTest.cpp  PerfTest.h  PerfTest.vcxproj  QueueTest.cpp  QueueTest.h  ReleaseTest.h  RetrieveReleaseTest.h  RetrieveTest.cpp  RetrieveTest.h  ThreadOverheadTest.h
StressTest/: CMakeLists.txt  ConsumerChannel.cpp  ConsumerChannel.h  ItemGenerator.cpp  ItemGenerator.h  Main.cpp  Main.h  Producer.cpp  Producer.h  SnapshotTaker.cpp  SnapshotTaker.h  SnapshotValidator.cpp  SnapshotValidator.h  StressTest.vcxproj
TestLib/: AQStrawMan.cpp  AQStrawMan.h  CMakeLists.txt  IAQReader.h  IAQWriter.h  Optarg.cpp  Optarg.h  Prng.h  Stopwatch.h  TestAssert.cpp  TestAssert.h  TestExecution.cpp  TestExecution.h  TestJUnitXmlReport.cpp  TestLib.vcxproj  TestLib.vcxproj.filters  TestRunner.cpp  TestRunner.h  TestSuite.h  TestTag.h
TestLib/Linux/: Event.cpp  Event.h  Mutex.h  WorkerThread.cpp
TestLib/Windows/: CriticalSection.h  Event.cpp  WorkerThread.cpp  WorkerThread.h
UnitTest/: AQTest.cpp  AQTest.h  CMakeLists.txt  Main.cpp  TestPointAction.cpp  TestPointAction.h  UnitTest.vcxproj  UtClaim.cpp  UtCommit.cpp  UtCrc32LinkId.cpp  UtExtendable.cpp  UtExtendableReader.cpp  UtExtendableSnapshot.cpp  UtExtendableWriter.cpp  UtFormat.cpp  UtObjectCopyAssign.cpp  UtObjectLifecycle.cpp  UtQueueId.cpp  UtRelease.cpp  UtRetrieve.cpp  UtSnapshot.cpp  UtUsageExample.cpp  UtWriterItem.cpp
src/aq/perftest/: AQProvider.cpp  AQProvider.h  CMakeLists.txt  ClaimCommitTest.cpp  CommitTest.h  FullQueueTest.cpp  FullQueueTest.h  Main.cpp  PerfTest.cpp  PerfTest.h  ReleaseTest.cpp  RetrieveReleaseTest.cpp  RetrieveReleaseTest.h  RetrieveTest.h  ThreadOverheadTest.cpp  aq_perftest.vcxproj
src/aq/stresstest/: CMakeLists.txt  ItemGenerator.cpp  ItemGenerator.h  Main.cpp  Main.h  Producer.cpp  Producer.h  SnapshotTaker.cpp  SnapshotValidator.cpp  SnapshotValidator.h  aq_stresstest.vcxproj
src/aqlog/lib/: AQLog.cpp  AQLog.h  AQLogConsumer.cpp  AQLogConsumer.h  AQLogFilter.cpp  AQLogFilter.h  AQLogFormatter.h  AQLogHandler.cpp  AQLogHandler.h  AQLogRecord.cpp  AQLogRecord.h  AQLogStringBuilder.cpp  AQLogStringBuilder.h  CMakeLists.txt  DefaultFormatter.cpp  aqlog.vcxproj  aqlog.vcxproj.filters
src/aqlog/lib/internal/: DefaultFormatter.h  HashFunction.cpp  LLHash.h  (+12 more)
src/aqlog/unittest/: CMakeLists.txt  DataSets.cpp  DataSets.h  HashData.h  HashMemory.cpp  HashMemory.h  LogReaderTest.cpp  LogReaderTest.h  Main.cpp  Main.h  RandomHandlers.cpp  RandomHandlers.h  TestHandler.cpp  TestHandler.h  UtAQLog.cpp  UtAQLogEncodeDecode.cpp  UtAQLogMacros.cpp  UtAQLogRecord.cpp  UtAQLogStringBuilder.cpp  UtHashFunction.cpp  UtLLHash.cpp  UtLogLevelHash.cpp  UtLogLevelHash.h  UtLogLevelHashFilter.cpp  UtLogMemory.cpp  UtLogReader.cpp  UtObjectLifecycle.cpp  UtWordWrapper.cpp  aqlog_unittest.vcxproj  aqlog_unittest.vcxproj.filters
src/aqosa/lib/: CMakeLists.txt  ProcessIdentifier.cpp  Timer.cpp  Timestamp.cpp  aqosa.vcxproj  aqosa.vcxproj.filters
src/tst/lib/: AQStrawMan.cpp  AQStrawMan.h  CMakeLists.txt  IAQReader.h  Optarg.cpp  Prng.cpp  Stopwatch.h  Test.h  TestAssert.cpp  TestAssert.h  TestExecution.cpp  TestJUnitXmlReport.h  TestRunner.h  TestSuite.cpp  TestSuite.h  TestTag.cpp  tst.vcxproj  tst.vcxproj.filters
(+932 files in other folders)
