cmake_minimum_required(VERSION 2.6)
project(aq)

set(GCC_FLAGS "-fexceptions -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS")
set(AQ_DEBUG_FLAGS "-DAQ_TEST_UNIT -DAQ_TEST_POINT -DAQ_TEST_TRACE")

set(CMAKE_CXX_FLAGS_DEBUG "${GCC_FLAGS} ${AQ_DEBUG_FLAGS} -g -fprofile-arcs -ftest-coverage")
set(CMAKE_CXX_FLAGS_RELEASE "${GCC_FLAGS} ${AQ_DEBUG_FLAGS} -O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_PERFORMANCE "${GCC_FLAGS} -O3 -DNDEBUG")

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
set(CMAKE_C_FLAGS_PERFORMANCE "${CMAKE_CXX_FLAGS_PERFORMANCE}")

set(CMAKE_EXE_LINKER_FLAGS_PERFORMANCE "")
set(CMAKE_SHARED_LINKER_FLAGS_PERFORMANCE "")

MARK_AS_ADVANCED(
    CMAKE_CXX_FLAGS_PERFORMANCE
    CMAKE_C_FLAGS_PERFORMANCE
    CMAKE_EXE_LINKER_FLAGS_PERFORMANCE
    CMAKE_SHARED_LINKER_FLAGS_PERFORMANCE)
    
    
add_subdirectory(AQ)
add_subdirectory(TestLib)
add_subdirectory(UnitTest)
add_subdirectory(StressTest)
add_subdirectory(PerfTest)
